# julius_tutorial

./: README.md  dtmf.c  master  zimmer_steuerung
beagleboard/: gpio_script
random_wallpaper/: .opendb.cpp.swp  main.cpp  opendb.cpp  opendb.hpp
sqlitepp-0.2/: AUTHORS  Doxyfile  Makefile  config.h  config.status  configure  configure.in  libtool  sqlitepp.kdevelop  sqlitepp.kdevelop.pcs
sqlitepp-0.2/src/: Makefile  Makefile.am  Makefile.in  dbSqliteConnection.cpp  dbSqliteConnection.h  dbSqliteConnection.lo  dbSqliteError.cpp  dbSqliteError.h  dbSqliteError.lo  dbSqliteField.cpp  dbSqliteField.h  dbSqliteField.lo  dbSqliteQuery.cpp  dbSqliteQuery.h  dbSqliteQuery.lo  dbSqliteRecordset.cpp  dbSqliteRecordset.h  dbSqliteRecordset.lo  dbSqliteTable.cpp  dbSqliteTable.h  dbSqliteTable.lo  files.cpp  files.h  files.lo  sqlitepp.cpp  sqlitepp.h  sqlitepp.lo  sqlitepp.so.la  strings.h
sqlitepp-0.2/src/.deps/: dbSqliteConnection.Plo  dbSqliteError.Plo  dbSqliteField.Plo  dbSqliteQuery.Plo  dbSqliteRecordset.Plo  dbSqliteTable.Plo  files.Plo  sqlitepp.Plo
sqlitepp-0.2/src/.libs/: sqlitepp.so.0  sqlitepp.so.0.0.0  sqlitepp.so.la  sqlitepp.so.lai
test/: CMakeCache.txt  CMakeLists.txt  Example  Makefile  cmake_install.cmake  fun.cpp
tut1/: main.cpp
tut2/: CMakeCache.txt  CMakeLists.txt  Example  Makefile  cmake_install.cmake  main.cpp
tut3/: fun.cpp  fun.hpp
zimmer_steuerung/: 1wire.c  1wire.c.save  1wire.h  1wire.h.save  <invalid path>  <invalid path>.layout  macros.h  macros.h.save  main.c  main.c.alt  main.c.save  zimmer_steuerung.cbp  zimmer_steuerung.cbp.save  (+3 more)
(+37 files in other folders)
